Bug 100158 - grouping processes doesn't work in gnome-shell/wayland
Summary: grouping processes doesn't work in gnome-shell/wayland
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
: 104285 (view as bug list)
Depends on:
Blocks: Wayland
  Show dependency treegraph
 
Reported: 2016-05-31 09:21 UTC by Rene Engelhard
Modified: 2021-06-09 14:02 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rene Engelhard 2016-05-31 09:21:46 UTC
Hi,

from https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=825043.

--- snip ---
Since a few versions, it seems that libreoffice processes are not
groupped under the same icon in the gnome-shell bar anymore.

Each document is creating a new entry (without an icon and named
"soffice") in the bar instead of being groupped under their type (one
icon for the wordprocessing documents, one for the spreadsheet...)

This is rather ugly.

I'm using gnome-shell wayland if it matters
--- snip ---

Turns out it's not "Since a few [LO] versions" but with wayland, see
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=825043#15:

--- snip ---

OK I just tried on my laptop, running the same version of gnome but 
running X instead of gnome-shell as a wayland compositor and it's 
working as expected
--- snip ---

Quick chat on IRC gives (2016-05-23):

12:31 < _rene_> caolan: you did some gtk3/wayland stuff lately according to https://cgit.freedesktop.org/libreoffice/core/log/?qt=grep&q=wayland. Is http://bugs.debian.org/825043 known?
12:32 -!- KhaledHosny [~khaled@41.69.28.11] has quit [Ping timeout: 244 seconds]
12:34 <@erAck> cloph: nice idea with COS(PI()*2)  
12:34 <@caolan> _rene_: its probably https://bugzilla.redhat.com/show_bug.cgi?id=1334915  
12:34 < IZBot> bug 1334915: Fedora-['libreoffice'] low/unspecified NEW Libreoffice Missing icons on dock and Alt+tab on Wayland  
12:34 -!- KhaledHosny [~khaled@41.69.97.189] has joined #libreoffice-dev
12:35 <@caolan> something "extra" might have gone wrong reason, but nevertheless there isn't a way to *change* the group of a window in gtk, so when you go from calc to startcenter to writer it gets "stuck" at the first group
12:36 <@caolan> under X we can tweak the bits that gtk3 sets in X manually to move it around, no so under wayland yet. Its super down my list at the moment though
Comment 1 Buovjaga 2016-08-02 12:03:12 UTC
I guess we can set to NEW.
Comment 2 David Tardon 2016-12-01 07:20:09 UTC
*** Bug 104285 has been marked as a duplicate of this bug. ***
Comment 3 Caolán McNamara 2017-02-23 17:01:15 UTC
https://bugzilla.gnome.org/show_bug.cgi?id=779143 for my proposed change to let me at the property we need via gtk
Comment 4 Commit Notification 2017-03-23 14:17:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6903066822900a700ccf67ae70fa171c94644a9a

Related: rhbz#1334915 tdf#100158 hack using startcenter icon under wayland

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Luke 2017-03-26 05:07:50 UTC
Ever since
http://cgit.freedesktop.org/libreoffice/core/commit/?id=6903066822900a700ccf67ae70fa171c94644a9a

Related: rhbz#1334915 tdf#100158 hack using startcenter icon under wayland

When I try to launch libreoffice, nothing happens. Reverting this commit fixes the issue. I have reproduced this bug on both Ubuntu 16.04 and 16.10.
Comment 6 Buovjaga 2017-03-26 09:22:42 UTC
(In reply to Luke from comment #5)
> Ever since
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=6903066822900a700ccf67ae70fa171c94644a9a
> 
> Related: rhbz#1334915 tdf#100158 hack using startcenter icon under wayland
> 
> When I try to launch libreoffice, nothing happens. Reverting this commit
> fixes the issue. I have reproduced this bug on both Ubuntu 16.04 and 16.10.

Discussion on dev ml: https://lists.freedesktop.org/archives/libreoffice/2017-March/077417.html
Comment 7 Caolán McNamara 2018-04-23 11:51:38 UTC
wrt this specific bug, given the current availability of apis this is as good as it gets. wrt "doesn't start", it starts fine for me and in Fedora distro generally
Comment 8 Paul Webb 2021-06-09 13:47:33 UTC
This may work fine now on gnome40 with wayland but it is still occurring on the latest plasma 5.22 with wayland. X11 works fine of course
Comment 9 Caolán McNamara 2021-06-09 14:02:38 UTC
There are 3 years between comment #7 and comment #8 and a lot has changed since. I suggest a new fresh bug with the details of your libreoffice version and vclplug variant because I think the general case is now solvable (and works with e.g. gtk3 variant and mutter-40.1) so you may have a specific set of circumstances where it still fails.