Related: rhbz#1334915 tdf#100158 hack using startcenter icon under wayland

cause I can get no traction with gnome#779143 to allow changing wayland
app_ids for windows, so might as well bodge something to make us look
less pathetic than the broken app icon

Change-Id: I9810ba4908dd06a2fdbb2e58e7ad6ff4978ddd43